[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cocorum"
version = "2.9.2"
keywords = ["rumble", "api", "wrapper", "livestream"]
authors = [
  { name="Wilbur Jaywright", email="zargulthewizard@outlook.com" },
]
description = "An unofficial Python wrapper for the Rumble Live Stream API v1.0 (beta)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4",
  "json-five",
  "requests",
  "sseclient-py", #Only for the Rumble chat SSE stream
  ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/thelabcat/cocorum"
Issues = "https://github.com/thelabcat/cocorum/issues"
Documentation = "https://thelabcat.github.io/cocorum/"
"Rumble Live Stream API docs" = "https://rumblefaq.groovehq.com/help/how-to-use-rumble-s-live-stream-api"
